<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="a1778291.cs.niu.edu.tictactoe.MainActivity"
    android:background="@drawable/background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/unmarked"
        android:layout_alignBottom="@+id/box1"
        android:layout_toRightOf="@+id/box1"
        android:layout_toEndOf="@+id/box1"
        android:layout_marginLeft="43dp"
        android:layout_marginStart="43dp"
        android:clickable="true"
        android:contentDescription="@string/box2"
        android:id="@+id/box2"
        android:layout_alignTop="@+id/box1" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/unmarked"
        android:layout_alignBottom="@+id/box2"
        android:layout_toRightOf="@+id/box2"
        android:layout_marginLeft="39dp"
        android:layout_marginStart="39dp"
        android:id="@+id/box3"
        android:clickable="true"
        android:contentDescription="@string/box3" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/unmarked"
        android:layout_alignTop="@+id/box4"
        android:layout_alignLeft="@+id/box2"
        android:layout_alignStart="@+id/box2"
        android:id="@+id/box5"
        android:clickable="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/unmarked"
        android:layout_alignBottom="@+id/box5"
        android:layout_alignLeft="@+id/box3"
        android:layout_alignStart="@+id/box3"
        android:id="@+id/box6"
        android:clickable="true"
        android:contentDescription="@string/box6" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/unmarked"
        android:layout_below="@+id/box4"
        android:layout_alignLeft="@+id/box4"
        android:layout_alignStart="@+id/box4"
        android:layout_marginTop="35dp"
        android:id="@+id/box7"
        android:clickable="true"
        android:contentDescription="@string/box7" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/unmarked"
        android:layout_alignTop="@+id/box7"
        android:layout_alignLeft="@+id/box5"
        android:layout_alignStart="@+id/box5"
        android:id="@+id/box8"
        android:clickable="true"
        android:contentDescription="@string/box8" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/unmarked"
        android:layout_alignTop="@+id/box8"
        android:layout_alignLeft="@+id/box6"
        android:layout_alignStart="@+id/box6"
        android:id="@+id/box9"
        android:clickable="true"
        android:contentDescription="@string/box9" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/unmarked"
        android:layout_marginTop="51dp"
        android:id="@+id/box4"
        android:clickable="true"
        android:contentDescription="@string/box4"
        android:layout_below="@+id/box1"
        android:layout_alignLeft="@+id/box1"
        android:layout_alignStart="@+id/box1" />

    <TextView
        android:text="@string/onGoing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textColor="@android:color/holo_green_light"
        android:textSize="18sp"
        android:layout_alignLeft="@+id/box7"
        android:layout_alignStart="@+id/box7"
        android:layout_toLeftOf="@+id/button"
        android:layout_toStartOf="@+id/button"
        android:layout_alignTop="@+id/button"
        android:layout_alignParentBottom="true"
        android:textAlignment="viewStart"
        android:fontFamily="monospace" />

    <Button
        android:text="@string/rst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_marginTop="46dp"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_below="@+id/box9"
        android:layout_toRightOf="@+id/box8"
        android:layout_toEndOf="@+id/box8" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/unmarked"
        android:layout_marginTop="53dp"
        android:clickable="true"
        android:contentDescription="@string/box1"
        android:id="@+id/box1"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
